# prettypp

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
src/: pretty.h  renderers.h
test/: pretty_test.cpp
